src/objects/Case_Status_Duration__c.object
<CustomObject>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ownership Taken</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Waiting on Customer</fullName>
                </value>
                <value>
                    <fullName>Waiting on Finance</fullName>
                </value>
                <value>
                    <fullName>Waiting on Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Waiting on QA</fullName>
                </value>
                <value>
                    <fullName>Waiting on Product Management</fullName>
                </value>
                <value>
                    <fullName>Waiting on Senior Management</fullName>
                </value>
                <value>
                    <fullName>Waiting on Human Resources</fullName>
                </value>
                <value>
                    <fullName>Waiting on Sales</fullName>
                </value>
                <value>
                    <fullName>Waiting on Materials Management</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Status_Durations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF( text(End_Time__c) &lt;&gt; &quot;&quot;,  End_Time__c - Start_Time__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Status_Durations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Duration</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Duration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>